tests/snapshots/integration_tests__stdlib_primitives_SpecAugment.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron SpecAugment(freq_mask_param = 27, time_mask_param = 100, num_freq_masks = 1, num_time_masks = 1):
  inputs:
    default: [batch, freq, time]
  outputs:
    default: [batch, freq, time]
  impl:
    Source: core,regularization/SpecAugment
