tests/snapshots/integration_tests__stdlib_primitives_Tanh.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Tanh:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,activations/Tanh
